[gd_scene load_steps=4 format=3 uid="uid://civ41f6eeymvt"]

[ext_resource type="Script" path="res://menu/Menu-pausa/opciones-menu-pausa.gd" id="1_2m6ga"]
[ext_resource type="Theme" uid="uid://dya6ykwne113c" path="res://theme.tres" id="2_5g1xd"]
[ext_resource type="FontFile" uid="uid://dkqolkx4rd6y6" path="res://menu/Perfect DOS VGA 437.ttf" id="3_wkvns"]

[node name="opciones-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0024, 1)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_2m6ga")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.490196, 0.698039, 1)

[node name="contents" type="VBoxContainer" parent="."]
self_modulate = Color(0.0431373, 0.611765, 0.666667, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -178.0
offset_right = 104.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5g1xd")
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="contents"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_wkvns")
text = "Opciones"
horizontal_alignment = 1
vertical_alignment = 1

[node name="options" type="PanelContainer" parent="contents"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="contents" type="VBoxContainer" parent="contents/options"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Opciones-audio" type="Button" parent="contents/options/contents"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_wkvns")
text = "Audio"

[node name="Opciones-video" type="Button" parent="contents/options/contents"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_wkvns")
text = "Video"

[node name="Reanudar-menu" type="Button" parent="contents/options/contents"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wkvns")
text = "Reanudar"

[node name="Salir" type="Button" parent="contents"]
layout_mode = 2
theme = ExtResource("2_5g1xd")
theme_override_fonts/font = ExtResource("3_wkvns")
text = "Salir"
flat = true

[connection signal="button_down" from="contents/options/contents/Opciones-audio" to="." method="_on_opcionesaudio_button_down"]
[connection signal="button_down" from="contents/options/contents/Opciones-video" to="." method="_on_opcionesvideo_button_down"]
[connection signal="button_down" from="contents/options/contents/Reanudar-menu" to="." method="_on_reanudarmenu_button_down"]
[connection signal="button_down" from="contents/Salir" to="." method="_on_salir_button_down"]
